2006.04.19: David Nichols
	* fixed some oracle and tibae compile bugs
	* use umem on Solaris for memory allocation if available
	* fixed some sybase/mssql compile bugs on Solaris

2006.04.13: David Nichols
	* added new DBI methods: get_server_version and get_client_version: both
	  functions are optional and return driver-specific version information
	* added corresponding Datasource methods:
		- Datasource::getServerVersion()
		- Datasource::getClientVersion()

2006.04.12: David Nichols
	* more documentation updates
	* implemented new File class methods: readu1(), readu2(), readu4(), 
	  readi8(), readu2LSB(), readu4LSB(), readi8LSB(), writeu1(), writeu2(),
	  writeu4(), writeu2LSB(), writeu4LSB(), writei8(), writei8LSB()
	* implemented new Socket class methods: Socket::recvu1(), 
	  Socket::recvu2(), Socket::recvu4(), Socket::recvu2LSB(),
	  Socket::recvu4LSB()

2006.04.11: David Nichols
	* massive documentation updates

2006.04.09: David Nichols
	* implemented callback support for sortDescending() and 
	  sortDescendingStable()
	* implemented reverse() for strings and lists (also UTF-8 strings)

2006.04.08: David Nichols
	* implemented function and object method call references, updated 
	  sort*(), min(), max() and set_signal_handler() to take call references

2006.04.07: David Nichols
	* removed unused SingleExitGate and Gate code
	* updated QoreCounter to unlock and check for signals to be handled on
	  spurious wakeups
	* modified the Counter class to check the condition after every wakeup;
	  this is necessary as signals can cause spurious wakeups
	* added SignalToName and NameToSignal hash constants
	* updated Queue class to handle signals on spurious wakeups
	* modified locking classes to handle signals on spurious wakeups

2006.04.06: David Nichols
	* improved mysql driver reconnections when in transaction
	* signal updates

2006.04.05: David Nichols
	* implemented remove_signal_handler() (experimental)
	* added QDOM_PROCESS to new signal functions